# cpp-for-computer-vision

week1/build-system-example/: CMakeLists.txt  buiild-systems.md  main  main.cpp  tools.cpp  tools.hpp
week2 /: a.out  guessing-game.cpp  input-params-and-streams.cpp  lecture-2.md  main.cpp  stream-example.cpp  task2  test  test.cpp
week3/: functions  functions.cpp  functions.md  opt  optimize-vector-resizing.cpp  stl.md
